# conan-calc

./: CMakeLists.txt  README.md  conanfile.py  env.sh  package.py  sonar-project.properties  test.cc  versions.txt
.github/workflows/: c-cpp.yml
profiles/: linux_debug  linux_release  mac_debug  mac_release
src/: CMakeLists.txt  calculator.cpp  calculator.h
test/: CMakeLists.txt  test.cc
test_package/: CMakeLists.txt  conanfile.py  example.cpp
